cmake_minimum_required(VERSION 2.8)
project(ChOgre)
#set path for local find modules
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
include(cmake/SBELUtils.cmake)
#enable_openmp_support()
#find_package(OGRE REQUIRED)
find_package(CHRONOENGINE REQUIRED)
find_package(SDL REQUIRED)
# User specified path to ChronoEngine
#SET(CHRONO_INC           ""    CACHE   PATH    "Where is ChronoEngine Source located")
# User specified path to ChronoEngine Libraries
#SET(CHRONO_LIB_PATH           ""   CACHE    PATH    "Where is ChronoEngine Lib located")
# Find required Libraries
#FIND_LIBRARY(CHRONO_LIB NAMES ChronoEngine PATHS ${CHRONO_LIB_PATH} REQUIRED)

SET(OGRE_INCLUDEDIR "OGRE_INCLUDEDIR-NOT_FOUND" CACHE PATH "Path to Ogre include dir")
SET(OGRE_LIBDIR_DEBUG "OGRE_LIBDIR_DEBUG-NOT_FOUND" CACHE PATH "Path to Ogre debug libs")
SET(OGRE_LIBDIR_RELEASE "OGRE_LIBDIR_RELEASE-NOT_FOUND" CACHE PATH "Path to Ogre release libs")

IF(EXISTS "${OGRE_INCLUDEDIR}/OGRE/Ogre.h")
	include_directories(${OGRE_INCLUDEDIR})
ELSE()
	SET(OGRE_INCLUDEDIR "OGRE_INCLUDEDIR-NOT_FOUND")
ENDIF()

FIND_LIBRARY(OGRE_MAINLIB_DEBUG
	NAMES OgreMain_d
	PATHS ${OGRE_LIBDIR_DEBUG}
	)
	
FIND_LIBRARY(OGRE_PAGINGLIB_DEBUG
	NAMES OgrePaging_d
	PATHS ${OGRE_LIBDIR_DEBUG}
	)
	
FIND_LIBRARY(OGRE_PROPERTYLIB_DEBUG
	NAMES OgreProperty_d
	PATHS ${OGRE_LIBDIR_DEBUG}
	)
	
FIND_LIBRARY(OGRE_RTSHADERLIB_DEBUG
	NAMES OgreRTShaderSystem_d
	PATHS ${OGRE_LIBDIR_DEBUG}
	)
	
FIND_LIBRARY(OGRE_MAINLIB_RELEASE
	NAMES OgreMain
	PATHS ${OGRE_LIBDIR_RELEASE}
	)
	
FIND_LIBRARY(OGRE_PAGINGLIB_RELEASE
	NAMES OgrePaging
	PATHS ${OGRE_LIBDIR_RELEASE}
	)
	
FIND_LIBRARY(OGRE_PROPERTYLIB_RELEASE
	NAMES OgreProperty
	PATHS ${OGRE_LIBDIR_RELEASE}
	)
	
FIND_LIBRARY(OGRE_RTSHADERLIB_RELEASE
	NAMES OgreRTShaderSystem
	PATHS ${OGRE_LIBDIR_RELEASE}
	)
	
SET(OGRE_LIBRARIES optimized ${OGRE_MAINLIB_RELEASE} optimized ${OGRE_PAGINGLIB_RELEASE} optimized ${OGRE_PROPERTYLIB_RELEASE} optimized ${OGRE_RTSHADERLIB_RELEASE} 
	debug ${OGRE_MAINLIB_DEBUG} debug ${OGRE_PAGINGLIB_DEBUG} debug ${OGRE_PROPERTYLIB_DEBUG} debug ${OGRE_RTSHADERLIB_DEBUG}
	)


SET(LIBRARIES ${CHRONOENGINE_LIBRARIES} ${SDL_LIBRARY} ${OGRE_LIBRARIES})

include_directories(
    ${CHRONOENGINE_INCLUDES}
	#${OGRE_INCLUDE_DIRS}
	${SDL_INCLUDE_DIR}
    "${CHRONOENGINE_INCLUDES}/collision" 
    "${CHRONOENGINE_INCLUDES}/collision/bullet" 
    )
	
ADD_SUBDIRECTORY(source/ChOgre)